EKA-35 | Updating the contract for consent approve and consent artefact. Changed controller path for getting consent artefact
